# closest-text-word-embeddings

./: .gitignore
backend/: main.py  pyproject.toml
backend/scripts/: build_conceptnet_index.py
backend/src/: __init__.py
backend/src/api/: models.py
backend/src/api/routes/: embeddings.py  interpolation.py  search.py
backend/src/config/: config.py
backend/src/core/: embedding_manager.py  interpolation.py  search_engines.py
backend/tests/: test_api_search.py  test_conceptnet_dataset.py  test_embedding_manager.py  test_interpolation_logic.py  test_search_engines.py
backend/tests/tests_core/: test_embedding_manager.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
